# ZPR_chess

./: .gitignore  CMakeLists.txt  Postgres.sql  README.md  gen_db.py  run.py  run.sh  run_tests.sh  tasks.py  temp.txt
chess_engine/: CMakeLists.txt  Doxyfile
chess_engine/src/: Board.cpp  Board.h  GameTree.cpp  GameTree.h  Move.cpp  Move.h  MoveGenerator.cpp  MoveGenerator.h  Piece.cpp  Piece.h  api.cpp  api.h  board.cpp  board.h  main.cpp  move.cpp  move.h  piece.cpp  piece.h  pybind11_wrapper.cpp
chess_engine/test/: Board_test.cpp  CMakeLists.txt  Move_test.cpp  Piece_test.cpp  test_main.cpp
chess_webapp/: __init__.py  forms.py  models.py  routes.py  utils.py
chess_webapp/chess_engine/: CMakeLists.txt  board.cpp  board.h
chess_webapp/chess_engine/src/: board.cpp  board.h  move.cpp  move.h  piece.cpp  piece.h
chess_webapp/static/css/: app.css  global.css  layout.css  styles.css
chess_webapp/static/js/: app.js  board.js  pieces.js  utils.js
chess_webapp/templates/: allowance.html  app.html  healthcare.html  home.html  housing_assistance.html  layout.html  login.html  my_proposals.html  new_proposal.html  new_proposal_sent.html  no_access.html  proposal_details.html  register.html  vacation_refund.html  verify_proposal.html  verify_proposals.html
